marketplace/ui/src/components/MarketPlace/index.css
:where(.css-dev-only-do-not-override-9ntgx0).ant-table-wrapper .ant-table-thead>tr>th,
:where(.css-dev-only-do-not-override-9ntgx0).ant-table-wrapper .ant-table-thead>tr>td {
  padding: 14px;
}

img.ant-image-preview-img {
  display: inline-block;
}

.carousel {
  display: none;
}

.carousel-slider {
  padding-bottom: 24px;
  display: flex;
}

.control-dots {
  margin: 0px !important;
}

.control-dots .dot {
  border: none !important;
  box-shadow: none !important;
  border-radius: 0px !important;
  height: 3px !important;
  width: 60px !important;
  background-color: #BABABA !important;
  border: none !important;
  opacity: 1 !important;
}

.control-dots .selected {
  background-color: #202020 !important;
}

.trending_cards::-webkit-scrollbar {
  display: none;
}
.trending_cards{
  scrollbar-width: none; 
}

@media (max-width: 525px) {
  .control-dots .dot {
    height: 4px !important;
    width: 10% !important;
  }
}
:where(.css-dev-only-do-not-override-9ntgx0).ant-checkbox-wrapper:not(.ant-checkbox-wrapper-disabled):hover .ant-checkbox-checked:not(.ant-checkbox-disabled) .ant-checkbox-inner{
  background-color: #181eac;
  border-color: #181eac;
}

:where(.css-dev-only-do-not-override-9ntgx0).ant-checkbox-checked .ant-checkbox-inner{
  background-color: #181eac;
  border-color: #181eac;
}

:where(.css-dev-only-do-not-override-9ntgx0).ant-checkbox-checked:after{
  border: 2px solid #181eac;
}

:where(.css-dev-only-do-not-override-9ntgx0).ant-input-number .ant-input-number-input{
  padding: 0;
}

.confirm-order-body {
  position: sticky;
  top: 200px;
}

.fixed-component{
  position: fixed;
  z-index: 90;
  background-color: white;
  width: 100%;
  height: 120px;
  margin-top: -25px;
}

.fixed-component-child{
  margin-top: 15px;
  width: 90%;
}

.gradient-button {
  color: white; 
  background: linear-gradient(270deg, #4F46E5 0%, #FB7185 100%);
}

.gradient-button:hover {
  background: linear-gradient(90deg, #4F46E5 0%, #FB7185 100%); 
}

